--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,8 +16,9 @@
             </div>
         </form>
         <div>
-            <a href="/singup">Singup inted</a>
+            <a href="/signup">Singup insted</a>
         </div>
     </div>
 </div>
+</main>
 <script src="./js/login.js"></script>
