--- a/views/createBlog.handlebars
+++ b/views/createBlog.handlebars
@@ -1,14 +1,17 @@
-<div>
+<div class="page-wrap">
+    <div class="title-wrap">
+        <h2>Create Blog</h2>
+    </div>
     <form class="new-blog-form">
         <div class="form-group">
             <label for="project-name">Title:</label>
-            <input class="form-input" type="text" id="blog-title" name="blog-title" />
+            <input class="form-input form-control" type="text" id="blog-title" name="blog-title" />
         </div>
         <div class="form-group">
             <label for="project-desc">contents:</label>
-            <textarea class="form-input" id="blog-contents" name="blog-contents"></textarea>
+            <textarea class="form-input form-control" id="blog-contents" name="blog-contents"></textarea>
         </div>
-        <div class="form-group">
+        <div class="form-group submit-btn-wrap">
             <button type="submit" class="btn btn-primary">Create</button>
         </div>
 
