--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,11 +1,21 @@
-{{#each blogs as |blog| }}
-<div>
-    <div>
-        <h2>
-            <a href="/comment/{{blog.id}}">{{blog.title}}</a>
-        </h2>
-        <p>{{blog.contents}}</p>
-        <p>Created by {{blog.user.name}} on {{format_date blog.date_created}}</p>
+<div class="blog-list-wrap">
+    {{#each blogs as |blog| }}
+    <div class="card-wrap">
+        <div class="card">
+            <div class="card-header">
+                <h3><a href="/comment/{{blog.id}}">{{blog.title}}</a></h3>
+            </div>
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <p>{{blog.contents}}</p>
+                    <footer class="blockquote-footer">Created by {{blog.user.name}} on {{format_date blog.date_created}}
+                    </footer>
+                </blockquote>
+            </div>
+        </div>
+
     </div>
+
+
+    {{/each}}
 </div>
-{{/each}}
