--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,19 +12,29 @@
 
 <body>
     <header>
-        <h1>
-            <a href="/">Tech Blog</a>
-        </h1>
-        <nav>
-            <!-- Conditionally render login or logout links -->
-            <a href="/">Home</a>
-            <a href="/dashboard">Dashboard</a>
-            {{#if logged_in}}
-            <button class="no-button" id="logout">logout</button>
-            {{else}}
-            <a href="/login">login</a>
-            {{/if}}
-        </nav>
+        <div class="nav-wrap row">
+            <div class="col-4 site-title-wrap ">
+                <h1> <a class="site-title" href="/">Tech Blog</a></h1>
+
+            </div>
+            <div class="col-8 nav-btn-wrap">
+                <nav>
+                    <div class="row">
+                        <div class="col-2"><a href="/">Home</a></div>
+                        <div class="col-6"><a href="/dashboard">Dashboard</a></div>
+                        {{#if logged_in}}
+                        <div class="col-4"><button class="btn btn-danger" id="logout">Log out</button></div>
+                        {{else}}
+                        <div class="col-4 "> <a class="btn btn-danger" href="/login">Login</a></div>
+                        {{/if}}
+
+                    </div>
+
+                </nav>
+            </div>
+
+        </div>
+
     </header>
     <main>
         {{{ body }}}
