--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,24 +1,27 @@
-<div>
-    <div>
+<div class="page-wrap">
+    <div class="title-wrap">
         <h2>Login</h2>
-
-        <form class="form login-form">
-            <div class="form-group">
-                <label for="email-login">email:</label>
-                <input class="form-input" type="text" id="email-login" />
-            </div>
-            <div class="form-group">
-                <label for="password-login">password:</label>
-                <input class="form-input" type="password" id="password-login" />
-            </div>
-            <div class="form-group">
-                <button class="btn btn-primary" type="submit">login</button>
-            </div>
-        </form>
-        <div>
-            <a href="/signup">Singup insted</a>
-        </div>
     </div>
+
+
+    <form class="form login-form">
+        <div class="form-group">
+            <label for="email-login">Email:</label>
+            <input class=" form-text form-input form-control" type="text" id="email-login" />
+        </div>
+        <div class="form-group">
+            <label for="password-login">Password:</label>
+            <input class="form-input form-control" type="password" id="password-login" />
+        </div>
+        <div class="form-group submit-btn-wrap">
+            <button class="btn btn-danger login-btn" type="submit">Login</button>
+        </div>
+    </form>
+
+    <div class="singup-wrap">
+        <a href="/signup">> Singup insted</a>
+    </div>
+
 </div>
 </main>
 <script src="./js/login.js"></script>
