--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,25 +1,25 @@
-<div>
-    <div class="col-md-6">
+<div class="page-wrap">
+    <div class="title-wrap">
         <h2>Signup</h2>
-
-        <form class="form signup-form">
-            <div class="form-group">
-                <label for="name-signup">name:</label>
-                <input class="form-input" type="text" id="name-signup" />
-            </div>
-            <div class="form-group">
-                <label for="email-signup">email:</label>
-                <input class="form-input" type="text" id="email-signup" />
-            </div>
-            <div class="form-group">
-                <label for="password-signup">password:</label>
-                <input class="form-input" type="password" id="password-signup" />
-            </div>
-            <div class="form-group">
-                <button class="btn btn-primary" type="submit">signup</button>
-            </div>
-        </form>
     </div>
+    <form class="form signup-form">
+        <div class="form-group">
+            <label for="name-signup">Name:</label>
+            <input class="form-input form-control" type="text" id="name-signup" />
+        </div>
+        <div class="form-group">
+            <label for="email-signup">Email:</label>
+            <input class="form-input form-control" type="text" id="email-signup" />
+        </div>
+        <div class="form-group">
+            <label for="password-signup">Password:</label>
+            <input class="form-input form-control" type="password" id="password-signup" />
+        </div>
+        <div class="form-group submit-btn-wrap">
+            <button class="btn btn-danger signup-btn" type="submit">Signup</button>
+        </div>
+    </form>
+
 </div>
 
 <script src="./js/signup.js"></script>
