--- a/views/updateBlog.handlebars
+++ b/views/updateBlog.handlebars
@@ -1,21 +1,27 @@
 <div class="wrap-update-blog-form">
+    <div class="title-wrap">
+        <h2>Update</h2>
+    </div>
     <form class="update-blog-form">
         <div class="form-group">
             <label for="project-name">Title:</label>
-            <input class="form-input" type="text" id="blog-title" name="blog-title" value="{{title}}" />
+            <input class="form-input form-control" type="text" id="blog-title" name="blog-title" value="{{title}}" />
         </div>
         <div class="form-group">
             <label for="project-desc">contents:</label>
-            <textarea class="form-input" id="blog-contents" name="blog-contents">{{contents}}</textarea>
+            <textarea class="form-input form-control" id="blog-contents" name="blog-contents">{{contents}}</textarea>
         </div>
-        <div class="form-group">
-            <button class="btn btn-primary update-btn" data-id="{{id}}">Update</button>
+        <div class="row">
+            <div class="form-group update-btn-wrap col-6">
+                <button class="btn btn-danger update-btn" data-id="{{id}}">Update</button>
+            </div>
+            <div class="wrap-delete-btn col-6">
+                <button class="btn btn-warning delete-btn" data-id="{{id}}">Delete</button>
+            </div>
         </div>
 
     </form>
-    <div class="wrap-delete-btn">
-        <button class="btn btn-danger delete-btn" data-id="{{id}}">DELETE</button>
-    </div>
+
 </div>
 
 <script src="./js/update.js"></script>
