Updated seed.js and readme file

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,8 +95,8 @@ nav a {
 }
 
 .card-header {
-  background-color: #C65D7B;
-  border: 1px solid #C65D7B;
+  background-color: #F68989;
+  border: 1px solid #F68989;
 }
 
 /* login , signup */
