--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,9 @@
 <div class="dashboardpPage-wrap">
+    <div class="title-wrap">
+        <h2>Dashboard</h2>
+    </div>
+    </br>
+    </br>
     {{#if blogs.length}}
     {{#each blogs as |blog| }}
     <div class="card-wrap">
